--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,53 +1,126 @@
-* {
-    padding:0;
-    margin:0;
-    box-sizing:border-box;
+:root {
+    --f1golden: #F5CA78;
+    --f1red: #F5050C;
+    --f1orange: #F55F11;
+    --f1peach: #F59A38;
+    --f1cream: #F5B695;
+    --f1watermelon: #F55E40;
 }
 
-html {
-    background-color:chocolate;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
+
+/* ------ DEFINICION DEL HEADER Y NAV ------- */
 
 header {
-    display:block;
-    background-color:#000;
-    width:100vw;
-    height:15vh;
-    border:3px solid white;
+    display: block;
+    background-color: #000;
+    width: 100vw;
+    height: 15vh;
+}
+
+.nav__ul {
+    display:flex;
+    justify-content:right;
+    align-items:center;
+    width:100%;
+    background-color:white;
 }
 
 header nav ul li {
-    display:inline-block;
-    height:2em;
+    display: inline-block;
     width:10em;
-    padding:.5em;
-    color:#8585c7;
+    height:2em;
+    padding: .4em;
+    color: #000000;
+    background-color:var(--f1red);
 }
 
-body > main > section > div {
-    display:block;
+header nav div.nav__ul a {
+    font-size:1.4em;
+    text-decoration:none;
+    text-align:center;
+}
+
+/* ------- DEFINICION DEL BODY ----------------- */
+
+body {
+    background-image: url(../Media/img/img_esta_vacio.webp);
+    background-color: rgb(35, 35, 80);
+    background-position: fixed;
+}
+
+section {
+    display:flex;
+    flex-flow:row wrap;
+    justify-content:space-around;
+    padding:5em;
     width:100vw;
-    height:100vh;
-    margin:3em 0;
-    border:none;
+    height:150vh;
+    margin:2em 0;
+    border-top:2px solid white;
+    border-bottom:2px solid white;
+    background-color:#ffffff63;
 }
 
-.section1 {
-    background-color:rgb(245, 0, 0);
+.seccion1__div-1 {
+    display:inline-block;
+    position:relative;
+    float:left;
+    min-width:400px;
+    width:500px;
+    height:70vh;
+    border-radius:30px;
+    background-color:var(--f1peach);
+    border: 1px solid var(--f1red);
+    box-shadow:5px 5px 10px #111;
+}
+
+.seccion1__div-2 {
+    display:inline-block;
+    position:relative;
+    float:left;
+    min-width:400px;
+    width:500px;
+    height:70vh;
+    border-radius:30px;
+    background-color:var(--f1orange);
+    border:1px solid var(--f1red);
+    box-shadow:5px 5px 10px #111;
+}
+
+.seccion1__div-3 {
+    display:inline-block;
+    position:relative;
+    float:left;
+    min-width:400px;
+    width:500px;
+    height:70vh;
+    border-radius:30px;
+    background-color:var(--f1watermelon);
+    border:1px solid var(--f1red);
+    box-shadow:5px 5px 10px #111;
 }
 
 .section2 {
-    background-color:rgb(245, 103, 38);
-
+    /*
+    background-color:var(--f1orange);*/
+    border-top: 5px solid var(--f1red);
 }
 
 .section3 {
-    background-color:rgb(249, 68, 255);
-
+    /*
+    background-color:var(--f1watermelon);*/
+    border-top: 5px solid var(--f1red);
 }
 
+
+/* --------------------- FOOTER ----------------------*/
 footer {
-    display:block;
-    background-color:rgb(214, 129, 1);
-    height:35vh;
+    display: block;
+    background-color: var(--f1cream);
+    height: 35vh;
 }
