--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -25,7 +25,7 @@
 
 header {
     display: block;
-    background-color: var(--fondouno);
+    background-color: #fff;
     width: 100%;
     height: 15vh;
 }
@@ -39,8 +39,8 @@ header {
     background-color: rgb(90, 52, 107);
 }
 
-.logo__prin {
     /*esto define el área donde va a ir el logo */
+.logo__prin {
     display: inline-block;
     width: 8.5em;
     height: 8.5em;
@@ -48,8 +48,8 @@ header {
     background-color: #F55E40;
 }
 
-.logo__fondo>h1 {
     /* texto sobre el logo */
+.logo__fondo>h1 {
     position: absolute;
     display: inline-block;
     left: 35px;
@@ -62,11 +62,11 @@ header {
 /*definicion del contenedor flex para el menu nav */
 .nav__ul {
     display: flex;
-    flex: row wrap;
+    flex-wrap:wrap;
     width: 100%;
-    height: 80px;
     justify-content: right;
-    padding:0 100px;
+    padding:0 50px;
+    background-color:white;
 
 }
 
@@ -108,80 +108,118 @@ ul.nav__ul li > a:hover {
     border:2px solid #fff;
 }
 
+nav ul i {
+    margin-right:15px;
+}
+
 
 /* ------- DEFINICION DEL BODY ----------------- */
 
 body {
-    background-color:var(--fondooscuro);
+    background-color:#fff;
 }
 
 /*se define los bloques principales en tamaño y color de fondo */
 section {
     display:block;
     max-width: 100vw;
-    height: 150vh;
+    height: 45vw;
     margin: 2em 0;
     border-top: 1px solid #fdbb00;
     border-bottom: 1px solid #fdbb00;
     background-image: linear-gradient(315deg ,var(--fondooscuro), var(--fondodos));
 }
 
+/* ---------------- SECCION 1 ------------------ */
 
-.seccion2__contenedor {
-    background-color:var(--f1orange);
-    border-top: 5px solid var(--f1red);
+.seccion1__img-container {
+    display:flex;
+    justify-content:center;
+    position:relative;
+    width:100%;
+    height:100%;
+    overflow:hidden;
+
+}
+
+.mask__div {
+    position:relative;
+    display:inline-block;
+    mask-image:linear-gradient(to left, #000 , transparent);
+}
+
+section div span img {
+    position:relative;
+    border-right:8vw solid rgb(255, 255, 255);
+    object-fit:cover;
+    width:100%;
+    height:100%;
+}
+
+.inicio__span-img {
+    position:absolute;
+    display:block;
+    left:15%;
+    top:10%;
+    font-size:4vw;
+    color:#222142;
+    width:20%;
+    text-shadow:0px 0px 2px #fff, 0px 0px 2px #fff;
+    border:1px solid white;
+}
+
+/* ----------------- SECCION 2 ------------------ */
+
+.seccion2__flex-form {
+    position:relative;
+    display:flex;
+    flex-flow:row nowrap;
+    justify-content:center;
+    align-items:center;
+    width:50%;
+    height:100%;
+    margin:0 auto;
+    border-radius:20px;
+    border:5px double white;
+    background-color:rgb(48, 32, 59);
+}
+
+.flex-container {
+    color:#fff;
+    display:block;
+
 }
 
 
 
-/* --------------------- FOOTER ----------------------*/
+
+
+/* --------------------- FOOTER -------------------*/
 footer {
     display: block;
-    background-color: var(--f1cream);
-    height: 35vh;
+    background-color: var(--fondodos);
+    min-height: 35vh;
+}
+
+footer > div.footer__flex-container {
+    display:flex;
+    justify-content:center;
+    width:100%;
+    flex-flow:row wrap;
+}
+
+footer > .footer__flex-container > div {
+    display:inline-block;
+    margin-top:20px;
+    min-width:350px;
+    min-height:250px;
+    text-align:center;
+    padding-top:20px;
+    font-size:1.2em;
+    font-weight:500;
+    font-family:Arial, Helvetica, sans-serif;
+    border:1px solid white;
+
 }
 
 /* ------------------TAGS TEMPORALES -------------------------*/
-
-#buscar::after {
-    content:"SECCION 1";
-    font-size:250px;
-    color:#fff;
-}
-
-#unirse::after {
-    content:"SECCION 2";
-    font-size:250px;
-    color: #fff;
-}
-
-#contacto::after {
-    content:"SECCION 3";
-    font-size:250px;
-    color: #fff;
-}
-
-footer::after {
-    content:"FOOTER";
-    font-size:250px;
-    color:#fff;
-
-}
-
-/*-------------------pruebas----------------------*/
-
-.flex_container {
-    display:flex;
-    justify-content:space-evenly;
-    height:50vh;
-    background-color:white;
-    align-items:flex-start;
-}
-
-.flex_item {
-    display:inline-block;
-    min-width:100px;
-    background-color:yellowgreen;
-    margin:auto;
-
-}
