--- a/CSS/login.css
+++ b/CSS/login.css
@@ -8,7 +8,7 @@
     box-sizing: border-box;
 }
 
-body {
+body main{
     display:flex;
     justify-content:center;
     align-items:center;
@@ -120,4 +120,8 @@ form > h1 {
     text-decoration:underline;
     text-shadow:0 0 10px gold;
 
+}
+
+.dueno__form {
+    display:none;
 }
