--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -15,6 +15,9 @@
     text-decoration: none;
 }
 
+html {
+    scroll-behavior:smooth;
+}
 .bebas-neue {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
@@ -25,7 +28,7 @@
 
 header {
     display: block;
-    background-color: #fff;
+    background-color: var(--fondodos);
     width: 100%;
     height: 15vh;
 }
@@ -63,18 +66,11 @@ header {
 .nav__ul {
     display: flex;
     flex-wrap:wrap;
-    width: 100%;
+    width: 80%;
     justify-content: right;
     padding:0 50px;
-    background-color:white;
+    background-color:var(--fondodos);
 
-}
-
-/*esto se puede BORRAR, es solamente para ubicar las etiquetas <li> en el nav*/
-.nav__ul>li {
-    height:100%;
-    border:1px solid white;
-    align-content:center;
 }
 
 
@@ -116,11 +112,12 @@ nav ul i {
 /* ------- DEFINICION DEL BODY ----------------- */
 
 body {
-    background-color:#fff;
+    background-color:var(--fondodos);
 }
 
 /*se define los bloques principales en tamaño y color de fondo */
 section {
+    position:relative;
     display:block;
     max-width: 100vw;
     height: 45vw;
@@ -169,44 +166,72 @@ section div span img {
 
 /* ----------------- SECCION 2 ------------------ */
 
-.seccion2__flex-form {
+.seccion2__flex-cont{
     position:relative;
     display:flex;
-    flex-flow:row nowrap;
-    justify-content:center;
-    align-items:center;
-    width:50%;
+    flex-flow:row wrap;
+    align-content:space-around;
+    justify-content:space-around;
+    width:80%;
     height:100%;
     margin:0 auto;
-    border-radius:20px;
-    border:5px double white;
-    background-color:rgb(48, 32, 59);
 }
 
-.flex-container {
+.seccion2__flex-cont > div {
+    position:relative;
+    display:flex;
+    border-radius:10px;
+    height:80%;
+    width:40%;
+
+}
+
+.seccion2__div-card {
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    padding:3em;
+    font-size:1.5vw;
+    line-height:2em;
+    color:#222142;
+    text-shadow:0 0 2px #fff;
+}
+
+.no_sombra-letra_blanca  {
+    text-shadow:none;
     color:#fff;
-    display:block;
-
 }
+
+
 
 /* --------------------SECCION 3 --------------------*/
 
-div.seccion3__mapa {
-    margin-top:100px;
+.seccion3__mapa {
     position:relative;
     display:flex;
     justify-content:center;
     align-content:center;
     height:80%;
+    width:50%;
 }
 
 .seccion3__mapa-iframe {
     height:100%;
+    width:100%;
     border-radius:25px;
+    pointer-events:none; /* esto en particular genera que no se pueda mover ni clickear el mapa*/
 }
 
 
-
+.btnmapa {
+    height:5em;
+    width:100%;
+    border:none;
+    background:orangered;
+    color:#fff;
+    font-weight:600;
+    font-size:1vw;
+}
 
 
 /* --------------------- FOOTER -------------------*/
